根据uri添加设备；具体设备的Service代码动态生成并编译