@@ -12,7 +12,7 @@ import java.util.*;
 @Service
 public class DomainBusiness {
     // domain增删改查
-    public DomainMeta addDomain(String domainId, String domainName, Map<String, Map<String, List<String>>> componentMap) {
+    public DomainMeta addDomain(String domainId, String domainName, Map<String, List<String>> componentMap) {
         DomainMeta domainMeta = new DomainMeta();
         domainMeta.setDomainId(domainId);
         domainMeta.setDomainName(domainName);
@@ -29,31 +29,22 @@ public class DomainBusiness {
         String domainId = rootNode.path("domainId").asText();
         String domainName = rootNode.path("domainName").asText();
 
-        Map<String, Map<String, List<String>>> componentMap = new HashMap<>();
+        Map<String, List<String>> componentMap = new HashMap<>();
         JsonNode componentTypeListNode = rootNode.path("componentTypeList");
         if (componentTypeListNode.isArray()){
             for (JsonNode componentTypeNode: componentTypeListNode){
                 String componentName = componentTypeNode.path("componentName").asText();
                 String type = componentTypeNode.path("type").asText();
-                JsonNode serviceTypeListNode = componentTypeNode.path("serviceType");
-                List<String> serviceType = new ArrayList<>();
-                if (serviceTypeListNode.isArray()) {
-                    for (JsonNode serviceNode : serviceTypeListNode) {
-                        serviceType.add(serviceNode.asText());
-                    }
-                }
 
                 if (componentMap.containsKey(type)){
-                    Map<String, List<String>> componentTypes = componentMap.get(type);
-                    if (componentTypes.containsKey(componentName)){
+                    List<String> componentTypes = componentMap.get(type);
+                    if (componentTypes.contains(componentName)){
                         System.out.println("领域内存在重复组件");
                     }else {
-                        componentTypes.put(componentName, serviceType);
+                        componentTypes.add(componentName);
                     }
                 }else {
-                    componentMap.put(type, new HashMap<>(){{
-                        put(componentName, serviceType);
-                    }});
+                    componentMap.put(type, new ArrayList<>(List.of(componentName)));
                 }
             }
         }
@@ -62,34 +53,23 @@ public class DomainBusiness {
         return addDomain(domainId,domainName,componentMap);
     }
 
-    public void addComponentType(String componentName, String type, String domainId, List<String> services) {
+    public void addComponentType(String componentName, String type, String domainId) {
         DomainMeta domainMeta = null;
-        Map<String, Map<String, List<String>>> componentTypeList = domainMeta.getComponentType();
+        Map<String, List<String>> componentTypeList = domainMeta.getComponentType();
         if (componentTypeList.containsKey(type)) {
-            Map<String, List<String>> componentTypes = componentTypeList.get(type);
-            if (componentTypes.containsKey(componentName)){
+            List<String> componentTypes = componentTypeList.get(type);
+            if (componentTypes.contains(componentName)){
                 System.out.println("领域内存在重复组件");
             }else {
-                componentTypes.put(componentName, services);
+                componentTypes.add(componentName);
             }
         }else {
-            componentTypeList.put(type, new HashMap<>(){{
-                put(componentName, services);
-            }});
+            componentTypeList.put(type, new ArrayList<>(List.of(componentName)));
         }
         domainMeta.setComponentType(componentTypeList);
     }
 
-    public Map<String, List<String>> getDeviceTypeList(String domainId) {
-//        DomainMeta domainMeta = null;
-//        Map<String, Map<String, List<String>>> componentTypeList = domainMeta.getComponentType();
-//        return componentTypeList.get("Device");
-        return new HashMap<>(){{
-            put("CoffeeMaker", new ArrayList<>(Arrays.asList("AService", "BService")));
-        }};
-    }
-
-    public List<String> getDeviceServiceType(String deviceType, String domainId) {
-        return new ArrayList<>(Arrays.asList("AService", "BService"));
+    public List<String> getDeviceTypeList(String domainId) {
+        return new ArrayList<>(List.of("CoffeeMaker"));
     }
 }
